crates/keron-lang/tests/corpus/errors/check/fn_body_local_shadows_outer_val.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `n` is already defined as a outer `val` in this scope
  --> 4:7
  |
4 |   val n = 2
  |       ^
